<resources>
    <string name="app_name">ManHood</string>
    <string name="choose_your_gender">CHOOSE YOUR GENDER</string>
    <string name="privacy_policy">By continuing you agree to the Terms of Use and you acknowledge that you have read the
        Privacy Policy
    </string>
    <string name="enter">ENTER</string>
    <string name="world">World</string>
    <string name="area">Area</string>
    <string name="hood">Hood</string>
    <string name="your_result">Your Results</string>
    <string name="manhood">ManHood</string>
    <string name="certificate_save_to_photo_library">Save to Photo Library</string>
    <string name="empty_row_value">---</string>
    <string name="length">LENGTH:</string>
    <string name="thickness">THICKNESS:</string>
    <string name="thickest_at">THICKEST AT:</string>
    <string name="curvature">CURVATURE:</string>
    <string name="date_of_issue">DATE OF ISSUE:</string>
    <string name="device">DEVICE:</string>
    <string name="manhood__">ManHood --</string>
    <string name="how_to_guide">HOW TO GUIDE</string>
    <string name="step_1">STEP 1</string>
    <string name="step_1_description">Sit in front of a mirror</string>
    <string name="step_2">STEP 2</string>
    <string name="step_2_description">Wear a white/blue/green/black T-shirt</string>
    <string name="step_3">STEP 3</string>
    <string name="step_3_description">Take off the cover</string>
    <string name="step_4">STEP 4</string>
    <string name="step_4_description">Press the phone to the bone</string>
    <string name="step_5">STEP 5</string>
    <string name="step_5_description">Make sure the edges of the phone and your manhood are as visible as possible
    </string>
    <string name="ready_male_title">Ready to Go</string>
    <string name="ready_female_title">That’s how to do it</string>
    <string name="ready_male_description">I got it! Time to measure!</string>
    <string name="ready_female_description">This is the way for guys to digitally measure themselves</string>
    <string name="settings">SETTINGS</string>
    <string name="hide_personal_data">Hide Personal Data</string>
    <string name="units">Units</string>
    <string name="join_the_inner_circle">Join the Inner Circle</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_caps">PRIVACY POLICY</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_of_use_caps">TERMS OF USE</string>
    <string name="privacy_policy_text" formatted="false">This Privacy Policy explains the information that The ManHood Team (\&quot;ManHood,\&quot;
        \&quot;we,\&quot; or \&quot;us\&quot;) collect about users of the \&quot;ManHood\&quot; mobile application and
        related
        services, how we use that
        information, and with whom we share it. If we make any material changes to our privacy practices, we will post a
        revised Privacy Policy on this page. If you have any questions, please contact us by sending an email to
        help@manhoodapp.com.\n

        \n<b>We strive to not collect any personally identifiable information</b>\n

        \n
        <b>Information we collect automatically:</b>
        When you use ManHood, we automatically collect and store information
        about your mobile device. This information includes:\n
        \t<b>•</b>\t Your installation of ManHood. We only register the device and not your personal data.\n
        \t<b>•</b>\t Your mobile device’s geographic location while the app is actively running\n
        \t<b>•</b>\t Technical information about your mobile device (such as type of device and operating system)\n
        \t<b>•</b>\t How long you are using ManHood and which services and features you used\n

        \n
        <b>Information you choose to provide:</b>
        In order to use all functions of ManHood, you can be asked to make
        measurements using the app. For development purposes we may store the pictures used to extract these
        measurements. We strive to have the highest security and ethical standard and at all time guard and facilitate
        these material, meaning that material and install information such as location is kept separated. In order to
        use ManHood you are asked to inform us about your sex. Other information might be required and might be public
        to others where you are represented in an anonymous group.
        <b>We do not store information like:</b>
        your name, address,
        email address, or phone number.

        \n
        <b>How we use your information:</b>
        We use your information to provide and improve our services. Your information
        will be public for other users in an anonymous group based on geographical location or other data provided by
        you.\n

        \n
        <b>Use of your information by others:</b>
        We may share user information with other companies for various reasons as
        described below. What information we make available to other companies depends on the nature of our relationship
        with them. We generally require these other companies to keep users\&apos; information confidential.\n
        <b>Science and Research institutions:</b>
        We may share all types of information for research purposes.\n
        <b>Advertisers:</b>
        We may allow advertisers and advertising networks to collect information about your mobile device,
        activities, and geographical location to include targeted ads to you.\n
        <b>Analytics Companies:</b>
        We may allow analytics companies to use tracking technologies to collect information about
        our users\&apos; devices and online activities. These companies analyze this information to help us understand
        how our
        service is being used.\n
        <b>Aggregated Information:</b>
        We may publicly disclose aggregated information about our users, such as making info
        graphics about average measurements per area in a city.\n
        <b>Legal matters:</b>
        We may disclose any information: in response to a legal request, such as a subpoena, court order,
        or government demand; to investigate or report illegal activity; or to enforce our rights or defend claims. We
        may also transfer your information to another company in connection with a corporate restructuring, such as a
        sale or merger.\n

        \n
        <b>Children\&apos;s privacy:</b>
        We do not allow persons under 18 to use this service, and we do not knowingly
        collect any
        personally identifiable information from persons under the age of 13.\n

        \n
        <b>Information from users outside the United States</b>
        If you\&apos;re outside the United States, your information
        will
        be
        sent to and stored in the United States, where our servers are located. By using ManHood, you agree to the
        information collection, use, and sharing practices described in this Privacy Policy.\n
    </string>
    <string name="fragment_help_header_text">Find help to use ManHood</string>
    <string name="measurement_taking_guide">Measurement taking guide</string>
    <string name="faq">Frequently asked questions</string>
    <string name="ref_shot">REF SHOT</string>
    <string name="front_shot">FRONT SHOT</string>
    <string name="side_shot">SIDE SHOT</string>
    <string name="next">Next</string>
</resources>