<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/camera_guide_bg_for_settings_screen"
                android:paddingTop="?android:attr/actionBarSize">

    <TextView android:id="@+id/fragment_help_header_text_view"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="7dp"
              android:textColor="@android:color/white"
              android:text="@string/fragment_help_header_text"
              android:textSize="18sp"
              android:layout_alignParentTop="true"/>

    <View android:id="@+id/fragment_help_separator_after_header"
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_below="@+id/fragment_help_header_text_view"
          android:background="@android:color/white"/>

    <RelativeLayout android:id="@+id/fragment_help_faq_relative"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/child_settings_list_height"
                    android:layout_below="@+id/fragment_help_separator_after_header"
                    style="@android:style/Widget.ActionButton"
                    android:clickable="true">

        <TextView android:id="@+id/fragment_help_faq_title_text_view"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/child_settings_list_height"
                  android:gravity="center_vertical"
                  android:textSize="19sp"
                  android:layout_marginRight="57dp"
                  android:textColor="@android:color/white"
                  android:text="@string/faq"/>

        <ImageView android:id="@+id/fragment_help_arrow_image_view"
                   android:layout_width="20dp"
                   android:layout_height="@dimen/child_settings_list_height"
                   android:src="@drawable/settings_arrow"
                   android:layout_alignParentRight="true"
                   android:scaleType="center"
                   android:adjustViewBounds="true"
                   android:paddingBottom="20dp"
                   android:paddingTop="20dp"/>
    </RelativeLayout>

    <View android:id="@+id/fragment_help_separator_after_faq_relative"
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_below="@+id/fragment_help_faq_relative"
          android:background="@android:color/white"/>

    <RelativeLayout android:id="@+id/fragment_help_measurements_taking_guide_relative"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/child_settings_list_height"
                    android:layout_below="@+id/fragment_help_separator_after_faq_relative"
                    style="@android:style/Widget.ActionButton"
                    android:clickable="true">

        <TextView android:id="@+id/fragment_help_measurement_taking_guide_title_text_view"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/child_settings_list_height"
                  android:gravity="center_vertical"
                  android:textSize="19sp"
                  android:layout_marginRight="57dp"
                  android:textColor="@android:color/white"
                  android:text="@string/measurement_taking_guide"/>

        <ImageView android:id="@+id/child_settings_list_arrow_image_view"
                   android:layout_width="20dp"
                   android:layout_height="@dimen/child_settings_list_height"
                   android:src="@drawable/settings_arrow"
                   android:layout_alignParentRight="true"
                   android:scaleType="center"
                   android:adjustViewBounds="true"
                   android:paddingBottom="20dp"
                   android:paddingTop="20dp"/>
    </RelativeLayout>

    <View android:id="@+id/fragment_help_separator_after_send_email_relative"
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:layout_below="@+id/fragment_help_measurements_taking_guide_relative"
          android:background="@android:color/white"/>

</RelativeLayout>