<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_camera_parent_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/camera_background"
    android:clickable="true"
    android:descendantFocusability="afterDescendants"
    android:paddingTop="?android:attr/actionBarSize" >

    <RelativeLayout
        android:id="@+id/fragment_camera_camera_and_crop_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fragment_camera_text_relative_layout"
        android:layout_alignParentTop="true" >

        <FrameLayout
            android:id="@+id/fragment_camera_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.VVTeam.ManHood.Resize.SquareRelativeLayout
            android:id="@+id/fragment_cropping_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
            android:background="@android:color/white" >

            <!--
            <it.sephiroth.android.library.imagezoom.ImageViewTouch
                android:id="@+id/fragment_camera_crop_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" 
                android:scaleType="centerCrop"/>
            -->

			<ImageView
                android:id="@+id/fragment_camera_ref_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop" />
			
            <ImageView
                android:id="@+id/fragment_camera_crop_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop" />

            <com.VVTeam.ManHood.View.BorderOverlay
                android:id="@+id/fragment_camera_crop_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />
            
            <!--  
            <ImageView
                android:id="@+id/fragment_camera_crop_overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/android_template" />
			-->
			
            <!--
                <com.edmodo.cropper.CropImageView android:id="@+id/fragment_camera_crop_image_view"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"/>
            -->

        </com.VVTeam.ManHood.Resize.SquareRelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_camera_text_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_camera_text_label_relative_height"
        android:layout_above="@+id/fragment_camera_bottom_bar_relative_layout" >

        <TextView
            android:id="@+id/fragment_camera_label_text_view"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fragment_camera_bottom_bar_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_camera_bottom_button_bar_height"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/fragment_camera_steps_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_camera_bottom_button_bar_height"
            android:orientation="vertical" >

            <View
                android:id="@+id/fragment_camera_bottom_button_bar_top_divider"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/camera_screen_divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/fragment_camera_ref_shot_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/ref_shot"
                        android:textColor="@android:color/white"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/fragment_camera_ref_shot_selection_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_alignParentBottom="true"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_tick"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/fragment_camera_ref_shot_done_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="9dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_check_white" />
                </RelativeLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/camera_screen_divider_color" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/fragment_camera_front_shot_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/front_shot"
                        android:textColor="@android:color/white"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/fragment_camera_front_shot_selection_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_alignParentBottom="true"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_tick"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/fragment_camera_front_shot_done_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="9dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_check_white" />
                </RelativeLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/camera_screen_divider_color" />

               <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/fragment_camera_side_shot_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/side_shot"
                        android:textColor="@android:color/white"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/fragment_camera_side_shot_selection_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_alignParentBottom="true"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_tick"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/fragment_camera_side_shot_done_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:padding="9dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_check_white" 
                        android:visibility="gone"/>
                </RelativeLayout>
                
               
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/fragment_camera_analyze_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_camera_bottom_button_bar_height"
            android:visibility="gone" >

            <Button
                android:id="@+id/fragment_camera_analyze_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/fragment_camera_analyze_bar_button_side_margin"
                android:layout_marginLeft="@dimen/fragment_camera_analyze_bar_button_side_margin"
                android:layout_marginRight="@dimen/fragment_camera_analyze_bar_button_side_margin"
                android:background="@drawable/next_button_background"
                android:text="@string/next"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>